dialog settings is done.

--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -11,7 +11,8 @@ data = 00:05:00
 
 [Alarm]
 sound = True
-sound_file = res/sound/beep0.wav
+sound_file = res\sound\beep0.wav
 notification = True
+blink_icon = True
 duration = 8
 
