add timer name; show timer state in tooltip of taskbar icon

--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -2,10 +2,12 @@
 mode = Standalone
 
 [Timer0]
+name = Working
 mode = OneShot
 data = 00:25:00
 
 [Timer1]
+name = Break
 mode = OneShot
 data = 00:05:00
 
