--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -14,7 +14,7 @@ data = 00:05:00
 [Alarm]
 sound = True
 sound_file = res\sound\beep0.wav
-notification = True
+notification = False
 blink_icon = True
 duration = 8
 
