cycling timer is working. Change icon display implementation

--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -3,18 +3,18 @@ mode = Standalone
 
 [Timer0]
 name = Working
-mode = OneShot
-data = 00:25:00
+mode = Cycling
+data = 00:00:08
 
 [Timer1]
 name = Break
-mode = OneShot
-data = 00:05:00
+mode = Cycling
+data = 00:00:10
 
 [Alarm]
 sound = True
 sound_file = res\sound\beep0.wav
 notification = False
 blink_icon = True
-duration = 8
+duration = 5
 
