add alternation mode

--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -1,15 +1,15 @@
 [TimerManager]
-mode = Standalone
+mode = Alternation
 
 [Timer0]
 name = Working
-mode = Cycling
-data = 00:00:08
+mode = OneShot
+data = 00:00:05
 
 [Timer1]
 name = Break
-mode = Cycling
-data = 00:00:10
+mode = OneShot
+data = 00:00:03
 
 [Alarm]
 sound = True
