--- a/src/wxPomoTimer.cfg
+++ b/src/wxPomoTimer.cfg
@@ -1,15 +1,15 @@
 [TimerManager]
-mode = Alternation
+mode = Standalone
 
 [Timer0]
 name = Working
 mode = OneShot
-data = 00:00:05
+data = 00:25:00
 
 [Timer1]
 name = Break
 mode = OneShot
-data = 00:00:03
+data = 00:05:00
 
 [Alarm]
 sound = True
